added build command in package.json

--- a/package.json
+++ b/package.json
@@ -2,23 +2,35 @@
   "name": "scissor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/src/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsnd --respawn ./src/index.ts"
+    "dev": "cross-env NODE_ENV=development tsnd --respawn ./src/index.ts",
+  
+    "build": "npm cache clean && npm install && if exist dist ( rmdir /s /q dist ) && tsc"
+   
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@superfaceai/one-sdk": "^2.4.2",
     "@types/uuid": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.6",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
+    "qrcode": "^1.5.3",
     "sequelize": "^6.31.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -26,8 +38,12 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.3",
+    "@types/nodemailer": "^6.4.8",
+    "@types/qrcode": "^1.5.0",
     "@types/sequelize": "^4.28.15",
     "cross-env": "^7.0.3",
-    "ts-node-dev": "^2.0.0"
+    "rimraf": "^5.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3"
   }
 }
