--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scissor",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/src/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd --respawn ./src/index.ts",
   
