--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd --respawn ./src/index.ts",
   
-    "build": "npm cache clean --force && npm install && rm -rf dist && tsc"
+    "build": "npm cache clean --force && npm install && rm -rf dist && node --max-old-space-size=4096 ./node_modules/typescript/bin/tsc"
+
    
     
   },
