--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd --respawn ./src/index.ts",
-    "build": "npm cache clean --force && npm install && rm -rf dist && ./node_modules/typescript/bin/tsc node --max-old-space-size=4096 "
+    "build": "npm cache clean --force && npm install && rm -rf dist && NODE_OPTIONS=--max-old-space-size=4096 ./node_modules/typescript/bin/tsc "
 
     
   },
