--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "cross-env": "^7.0.3",
     "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "4.3.5"
   }
 }
