--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
@@ -28,6 +29,7 @@
     "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
     "qrcode": "^1.5.3",
+    "redis": "^4.6.7",
     "sequelize": "^6.31.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
